test/expected/explain_ecf_v-Rstr-03.out
explain extern R"abc(X)ab)abc" void f()
               ^
16: error: "X)ab": unknown linkage language; did you mean "C" or "C++"?
